--- a/site/diagnostics/cybersecurite.html
+++ b/site/diagnostics/cybersecurite.html
@@ -220,7 +220,7 @@ function showResult() {
     countdownEl.innerText = timeLeft;
     if (timeLeft <= 0) {
       clearInterval(interval);
-      window.location.href = "https://master-metrics.vercel.app/diagnostics/synthese.html";
+      window.location.href = "https://master-metrics.vercel.app/synthese.html";
     }
   }, 1000);
 }
@@ -230,4 +230,5 @@ loadQuestion();
 
 </body>
 </html>
+
 
