--- a/site/synthese.html
+++ b/site/synthese.html
@@ -150,6 +150,8 @@ footer {
   color: #666;
 }
 </style>
+  <script defer src="/_vercel/insights/script.js"></script>
+
 </head>
 
 <body>
@@ -262,3 +264,4 @@ https://calendar.app.google/TWzExGsSew5rCkN77
 
 </body>
 </html>
+
