--- a/site/diagnostics/credit.html
+++ b/site/diagnostics/credit.html
@@ -92,6 +92,8 @@ footer {
   margin-top: 30px;
 }
 </style>
+  <script defer src="/_vercel/insights/script.js"></script>
+
 </head>
 
 <body>
@@ -217,3 +219,4 @@ loadQuestion();
 
 </body>
 </html>
+
