--- a/site/diagnostics/digital.html
+++ b/site/diagnostics/digital.html
@@ -102,6 +102,8 @@ footer {
   margin-top: 30px;
 }
 </style>
+  <script defer src="/_vercel/insights/script.js"></script>
+
 </head>
 
 <body>
@@ -249,6 +251,7 @@ loadQuestion();
 
 </body>
 </html>
+
 
 
 
