--- a/site/synthese.html
+++ b/site/synthese.html
@@ -203,6 +203,7 @@ footer {
 </main>
 
 <footer>
+<a href="../index.html" style="display:inline-block;margin-top:20px;padding:12px 24px;background:#0074D9;color:white;text-decoration:none;border-radius:10px;font-weight:bold;">← Retour à l'accueil</a>
 © 2025 Master Your Metrics — Tous droits réservés
 </footer>
 
@@ -264,4 +265,5 @@ https://calendar.app.google/TWzExGsSew5rCkN77
 
 </body>
 </html>
+
 
