--- a/site/synthese.html
+++ b/site/synthese.html
@@ -203,8 +203,9 @@ footer {
 </main>
 
 <footer>
-<a href="../index.html" style="display:inline-block;margin-top:20px;padding:12px 24px;background:#0074D9;color:white;text-decoration:none;border-radius:10px;font-weight:bold;">← Retour à l'accueil</a>
-© 2025 Master Your Metrics — Tous droits réservés
+<a href="../index.html" style="display:inline-block;margin-top:20px;padding:12px 24px;background:#0074D9;color:white;text-decoration:none;border-radius:10px;font-weight:bold;"> Retour à l'accueil</a>
+  
+ <p> © 2025 Master Your Metrics — Tous droits réservés </p>
 </footer>
 
 <script>
@@ -265,5 +266,6 @@ https://calendar.app.google/TWzExGsSew5rCkN77
 
 </body>
 </html>
+
 
 
