--- a/site/index.html
+++ b/site/index.html
@@ -6,109 +6,117 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Master Your Metrics – Diagnostic</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0; padding: 0;
-      background-color: #f5f5f5;
-      color: #333;
-    }
-    header, footer {
-      background-color: #0b1f3a;
-      color: white;
-      padding: 2rem;
-      text-align: center;
-    }
-    section {
-      padding: 2rem;
-      max-width: 1000px;
-      margin: auto;
-    }
-    .cta-button {
-      display: inline-block;
-      padding: 1rem 2rem;
-      background-color: #007acc;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      margin-top: 1rem;
-    }
-    .features {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-      justify-content: space-between;
-    }
-    .feature {
-      flex: 1 1 45%;
-      background: white;
-      padding: 1rem;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
-    }
-    .usecase-carousel {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      margin-top: 2rem;
-      text-align: center;
-      font-style: italic;
-    }
-    .testimonial {
-      background: white;
-      margin-top: 2rem;
-      padding: 1rem;
-      border-left: 5px solid #007acc;
-    }
-    .roadmap {
-      list-style: none;
-      padding: 0;
-      margin-top: 1rem;
-    }
-    .roadmap li {
-      margin: 0.5rem 0;
-      padding-left: 1.5rem;
-      position: relative;
-    }
-    .roadmap li::before {
-      content: "✔";
-      color: #28a745;
-      position: absolute;
-      left: 0;
-    }
-    .about-block {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      align-items: center;
-    }
-    .about-image {
-      flex: 1 1 30%;
-      min-width: 250px;
-      text-align: center;
-    }
-    .about-image img {
-      max-width: 100%;
-      border-radius: 10px;
-    }
-    .about-text {
-      flex: 1 1 65%;
-    }
-    #scrollCTA {
-      display: none;
-      position: fixed;
-      bottom: 30px;
-      right: 30px;
-      background-color: #28a745;
-      color: white;
-      padding: 14px 20px;
-      border-radius: 50px;
-      font-size: 1em;
-      font-weight: bold;
-      text-decoration: none;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      z-index: 999;
-    }
+    :root {
+  --bg-main: #f4f6f8;
+  --bg-dark: #0b1c2d;
+  --primary: #6c5ce7;
+  --secondary: #00cec9;
+  --accent: #28a745;
+  --text-main: #2d3436;
+}
+
+body {
+  font-family: "Inter", "Segoe UI", Roboto, sans-serif;
+  margin: 0;
+  background: linear-gradient(135deg, #f4f6f8, #eef2f6);
+  color: var(--text-main);
+  line-height: 1.6;
+}
+
+header, footer {
+  background: linear-gradient(135deg, #0b1c2d, #162c4f);
+  color: white;
+  padding: 3rem 2rem;
+  text-align: center;
+}
+
+header h1 {
+  font-size: 2.4rem;
+  letter-spacing: -0.5px;
+}
+
+section {
+  padding: 3rem 2rem;
+  max-width: 1100px;
+  margin: auto;
+}
+
+.cta-button {
+  display: inline-block;
+  padding: 1rem 2.4rem;
+  background: linear-gradient(135deg, var(--primary), var(--secondary));
+  color: white;
+  text-decoration: none;
+  border-radius: 50px;
+  font-weight: 600;
+  margin-top: 1.5rem;
+  transition: all 0.25s ease;
+  box-shadow: 0 8px 18px rgba(108,92,231,0.25);
+}
+
+.cta-button:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 12px 26px rgba(108,92,231,0.35);
+}
+
+.features {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 1.5rem;
+}
+
+.feature {
+  background: white;
+  padding: 1.8rem;
+  border-radius: 16px;
+  box-shadow: 0 12px 30px rgba(0,0,0,0.08);
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
+}
+
+.feature:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 18px 40px rgba(0,0,0,0.12);
+}
+
+.usecase-carousel {
+  background: white;
+  padding: 2rem;
+  border-radius: 18px;
+  box-shadow: 0 12px 30px rgba(0,0,0,0.08);
+  margin-top: 3rem;
+  font-style: italic;
+}
+
+.testimonial {
+  background: white;
+  margin-top: 3rem;
+  padding: 2rem;
+  border-left: 5px solid var(--primary);
+  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+}
+
+.roadmap li::before {
+  content: "●";
+  color: var(--accent);
+}
+
+#scrollCTA {
+  position: fixed;
+  bottom: 28px;
+  right: 28px;
+  background: linear-gradient(135deg, var(--accent), #1e7e34);
+  color: white;
+  padding: 14px 26px;
+  border-radius: 50px;
+  font-weight: bold;
+  text-decoration: none;
+  box-shadow: 0 10px 24px rgba(40,167,69,0.35);
+  transition: all 0.25s ease;
+}
+
+#scrollCTA:hover {
+  transform: translateY(-2px);
+}
   </style>
   <script defer src="/_vercel/insights/script.js"></script>
 </head>
