--- a/site/index.html
+++ b/site/index.html
@@ -196,9 +196,11 @@ style="
       opacity: 0.95;
     ">
       Vous avez complété votre diagnostic.  
-      En <strong>30 minutes gratuites</strong>, nous analysons vos résultats et vous indiquons
-      <strong>quoi corriger en priorité</strong>, <strong>quoi automatiser</strong> et
-      <strong>comment sécuriser votre activité</strong> sans complexité inutile.
+      En <strong>30 minutes gratuites</strong>, 
+      nous passons en revue vos résultats
+      <strong> pour évaluer votre niveau de maturité,</strong>,
+      identifier vos points critiques et définir<strong> les priorités d’action, </strong>
+      <strong>afin de sécuriser votre activité</strong> sans jargon inutile.
     </p>
 
     <div style="
