--- a/site/index.html
+++ b/site/index.html
@@ -134,17 +134,37 @@ section {
   <h2>Qui sommes-nous ?</h2>
   <div class="about-block">
     <div class="about-image">
-      <img src="MMimage.JPG" alt="Photo professionnelle de l'équipe" style="max-width: 300px; border-radius: 10px;">
+      <img src="MMimage.JPG" alt="Équipe Master Your Metrics"
+           style="max-width: 300px; border-radius: 14px; box-shadow:0 8px 20px rgba(0,0,0,0.12);">
     </div>
     <div class="about-text">
-      <p>Master Your Metrics est une solution conçue par des experts de la finance, de la conformité et du digital pour aider les indépendants, PME et professionnels du chiffre à piloter leur activité avec clarté et anticipation.</p>
-      <p>À l’approche de 2026, les exigences réglementaires, les attentes des partenaires et la pression sur la performance s’intensifient. Nous sommes convaincus qu’un pilotage efficace commence par une vision objective de sa situation réelle.</p>
-       <p>Grâce à nos diagnostics en ligne, nos analyses ciblées et notre accompagnement opérationnel, nous vous aidons à structurer et renforcer vos fondamentaux clés : durabilité (ESG), conformité (AML/KYC) et efficacité digitale, afin de prendre les bonnes décisions, au bon moment.</p>
+      <p>
+        <strong>Master Your Metrics</strong> est une solution conçue par des experts en finance,
+        conformité et digital pour aider les indépendants, PME et professionnels du chiffre
+        à <strong>piloter leur activité avec clarté et anticipation</strong>.
+      </p>
+      <p>
+        À l’approche de <strong>2026</strong>, les exigences réglementaires, les attentes des partenaires
+        et la pression sur la performance s’intensifient.
+        Nous vous aidons à <strong>évaluer objectivement votre situation</strong> et à
+        <strong>prioriser les bonnes décisions</strong>, sans jargon inutile.
+      </p>
+      <p style="margin-top:10px;font-weight:600;color:#0b1f3a;">
+        Diagnostic clair. Décisions structurées. Actions maîtrisées.
+      </p>
     </div>
   </div>
 </section>
 
+
 <section id="modules">
+  .feature {
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
+}
+.feature:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 12px 30px rgba(0,0,0,0.12);
+}
   <h2>Nos 5 Modules Clés</h2>
   <div class="features">
      <a href="diagnostics/esg.html" class="feature" style="text-decoration: none; color: inherit;">
@@ -182,20 +202,20 @@ style="
       🎯 Passez du diagnostic à l’action
     </h2>
 
-    <p style="
-      font-size: 1.25em;
-      line-height: 1.6;
-      max-width: 750px;
-      margin: 0 auto 35px auto;
-      opacity: 0.95;
-    ">
-      Vous avez complété votre diagnostic.  
-      En <strong>30 minutes gratuites</strong>, 
-      nous passons en revue vos résultats
-      <strong> pour évaluer votre niveau de maturité,</strong>,
-      identifier vos points critiques et définir<strong> les priorités d’action, </strong>
-      <strong>afin de sécuriser votre activité</strong> sans jargon inutile.
-    </p>
+   <p style="
+  font-size: 1.25em;
+  line-height: 1.6;
+  max-width: 750px;
+  margin: 0 auto 35px auto;
+  opacity: 0.95;
+">
+  Vous avez complété votre diagnostic.<br>
+  En <strong>30 minutes gratuites</strong>, nous passons en revue vos résultats pour
+  <strong>évaluer votre niveau de maturité</strong>, identifier vos points critiques
+  et définir <strong>les priorités d’action</strong>, afin de
+  <strong>sécuriser votre activité</strong> — sans jargon inutile.
+</p>
+
 
     <div style="
       display: flex;
