--- a/site/index.html
+++ b/site/index.html
@@ -312,8 +312,39 @@ Le Dieselgate (Volkswagen) a montré qu’un défaut de conformité ESG peut imp
   </section>
 <section id="temoignages">
   <h2>🎤 Ils témoignent</h2>
-  <div class="testimonial">“En quelques clics, j’ai compris pourquoi ma demande de crédit bloquait. On a tout restructuré grâce au diagnostic.”<br><strong>— Sophie L., Dirigeante de PME</strong></div>
+
+  <div class="testimonial-slider">
+
+    <div class="testimonial-slide active">
+      <img src="assets/images/sophie.jpg" alt="Sophie - Dirigeante PME">
+      <div class="testimonial-content">
+        “En quelques clics, j’ai compris pourquoi ma demande de crédit bloquait.
+        Le diagnostic nous a permis de restructurer notre approche.”
+        <strong>— Sophie L., Dirigeante de PME</strong>
+      </div>
+    </div>
+
+    <div class="testimonial-slide">
+      <img src="assets/images/marc.jpg" alt="Marc - Expert-comptable">
+      <div class="testimonial-content">
+        “L’approche est claire, structurée et orientée décision.
+        Nous avons identifié nos priorités avant un contrôle AML.”
+        <strong>— Marc D., Expert-comptable</strong>
+      </div>
+    </div>
+
+    <div class="testimonial-slide">
+      <img src="assets/images/karim.jpg" alt="Karim - Responsable conformité">
+      <div class="testimonial-content">
+        “Un vrai outil d’aide à la décision.
+        Sans jargon, avec une vision concrète des risques.”
+        <strong>— Karim B., Responsable conformité</strong>
+      </div>
+    </div>
+
+  </div>
 </section>
+
 
 <section id="plan">
   <h2>🗺️ Feuille de route</h2>
